methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:32: error: not found: value boule
boule=false
^MethodsReturning:33: error: not found: value boule
while(boule = false){
      ^MethodsReturning:36: error: not found: value haveBaggel
  test= haveBaggel()
        ^